Bild align left/right

--- a/WebApplication46/index2.html
+++ b/WebApplication46/index2.html
@@ -3,12 +3,13 @@
 <head>
     <title>Hästar</title>
     <meta charset="utf-8" />
+    <!--<link href="Styles/djur.css" rel="stylesheet" />-->
     <link href="Styles/divOspan.css" rel="stylesheet" />
 </head>
 <body>
     <!--<div id="header">    //Gamla sättet att skriva på
         <div id="nav">
-
+        
         </div>
     </div>
     <div id="article"></div>
