--- a/WebApplication46/2016-04-04/Formular.html
+++ b/WebApplication46/2016-04-04/Formular.html
@@ -15,6 +15,8 @@
 
             <label for="nisse">Efternamn</label>
             <input name="LastName" 
+                   autofocus
+                   placeholder="Efternamn..."
                    id="nisse" /> <br />
 
             <label for="mailus">Mail:</label>
