--- a/WebApplication46/2016-04-05/pages/tabbelenJajamensan.html
+++ b/WebApplication46/2016-04-05/pages/tabbelenJajamensan.html
@@ -6,6 +6,7 @@
     <style>
         th, td{
             padding-left: 40px;
+            border: 1px solid black;
         }
       
     </style>
