--- a/WebApplication46/2016-04-05/pages/CenterWrapper.html
+++ b/WebApplication46/2016-04-05/pages/CenterWrapper.html
@@ -5,12 +5,14 @@
 	<meta charset="utf-8" />
     <style>
         body {
-            background-color: blue;
+            background-image: url('../images/hav.jpg');
         }
         #wrapper{
             background-color: rgba(150,150,150, 0.7);
-            width: 960px;
-            margin: 0 auto;
+            max-width: 360px;
+            margin: 40px auto;
+            border-radius: 30%;
+            border: 3px solid black;
         }
     </style>
 </head>
