--- a/WebApplication46/2016-04-05/pages/CenterWrapper.html
+++ b/WebApplication46/2016-04-05/pages/CenterWrapper.html
@@ -20,6 +20,10 @@
     <div id="wrapper">
         <h1>Rubrik</h1>
         <p>Text .... Text...</p>
+        <form>
+            <input maxlength="4" autofocus />
+            <input type="submit" />
+        </form>
     </div>
 </body>
 </html>
