--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -19,16 +19,26 @@
                 </ul>
             </nav>
         </header>
-        <article>
-            <figure>
-                <img src="images/kaka.PNG" alt="En god kaka" title="brownies är goda" />
-                <figcaption>Choklad-kaka</figcaption>
-            </figure>
-            <h2>Hårda kakor</h2>
-            <h3>Mjuka kakor</h3>
-            <p>Fem om dagen gör kroppen glad. Passa på att mumsa i dig 2 hårda och 3 mjuka kakor. Train hard and enjoy your dinner!</p>
-        </article>
-
+        <section class="courses">
+            <article >
+                <figure>
+                    <img src="images/kaka.PNG" alt="En god kaka" title="brownies är goda" />
+                    <figcaption>Choklad-kaka</figcaption>
+                </figure>
+                <h2>Hårda kakor</h2>
+                <h3>Mjuka kakor</h3>
+                <p>Fem om dagen gör kroppen glad. Passa på att mumsa i dig 2 hårda och 3 mjuka kakor. Train hard and enjoy your dinner!</p>
+            </article>
+            <article>
+                <figure>
+                    <img src="images/kaka.PNG" alt="En god kaka" title="brownies är goda" />
+                    <figcaption>Choklad-kaka</figcaption>
+                </figure>
+                <h2>Hårda kakor</h2>
+                <h3>Mjuka kakor</h3>
+                <p>Fem om dagen gör kroppen glad. Passa på att mumsa i dig 2 hårda och 3 mjuka kakor. Train hard and enjoy your dinner!</p>
+            </article>
+        </section>
     </div>
 </body>
 </html>
