All but the footer

--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -39,6 +39,23 @@
                 <p>Fem om dagen gör kroppen glad. Passa på att mumsa i dig 2 hårda och 3 mjuka kakor. Train hard and enjoy your dinner!</p>
             </article>
         </section>
+        <aside>
+            <section class="popular-recepies">
+                <h2>Populära recept</h2>
+                <a href="">Recept 1</a>
+                <a href="">Recept 2</a>
+                <a href="">Recept 3</a>
+                <a href="">Recept 4</a>
+            </section>
+
+            <section class="kontaktdetaljer">
+                <h2>Kontaktdetaljer</h2>
+                <a href="">Kontakt 1</a>
+                <a href="">Kontakt 2</a>
+                <a href="">Kontakt 3</a>
+
+            </section>
+        </aside>
     </div>
 </body>
 </html>
