--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -56,6 +56,9 @@
 
             </section>
         </aside>
+        <footer>
+            <p>&copy; Choklad-Toppar</p>
+        </footer>
     </div>
 </body>
 </html>
