johan bestämde 10 minuter

--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="wrapper">
         <header>
-            <h1>Choklad toppar</h1>
+            <h1>Kakor é gött</h1>
             <nav>
                 <!--hem, pannkakor, chokladkakor, bullar, om oss-->
                 <ul>
