El grande finale yipeeeee!

--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -16,7 +16,7 @@
                     <li><a href="pages/pannkakor.html">Pannkakor</a></li>
                     <li><a href="pages/chokladkakor.html">Chokladkakor</a></li>
                     <li><a href="pages/bullar.html">Bullar</a></li>
-                    <li><a href="pages/omOss.html">Om oss</a></li>
+                    <li class="courses"><a href="pages/omOss.html">Om oss</a></li>
                 </ul>
             </nav>
         </header>
