--- a/WebApplication46/2016-04-11/index.html
+++ b/WebApplication46/2016-04-11/index.html
@@ -40,6 +40,7 @@
                 <p>Fem om dagen gör kroppen glad. Passa på att mumsa i dig 2 hårda och 3 mjuka kakor. Train hard and enjoy your dinner!</p>
             </article>
         </section>
+        <span class="current">1.</span><span>2.</span><span>3.</span><span>4.</span>
         <aside>
             <section class="popular-recepies">
                 <h2>Populära recept</h2>
