--- a/WebApplication46/2016-04-12/BootstrapElgiganten.html
+++ b/WebApplication46/2016-04-12/BootstrapElgiganten.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>ELgiganten layout minimalistiskt!</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" />    
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <style>
         section,aside{
@@ -17,7 +17,7 @@
             <section class="col-sm-8">Center Header</section>
             <section class="col-sm-2">Right Header</section>
         </header>
-        <div class="row">
+        <section class="row">
             <aside class="col-sm-2">
                 Aside 1
                 <ul>
@@ -41,7 +41,7 @@
                     <section class="col-sm-4">BILD 3</section>
                 </div>
             </section>
-        </div>
+        </section>
         <footer></footer>
     </div>
 </body>
