--- a/WebApplication46/2016-04-12/bootstraping.html
+++ b/WebApplication46/2016-04-12/bootstraping.html
@@ -4,6 +4,7 @@
     <title></title>
     <meta charset="utf-8" />
     <link href="../Content/bootstrap.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <style>
         footer, aside, header{
             background-color: hotpink;
@@ -28,12 +29,12 @@
 
     <section class="container">
         <div class="row">
-            <aside class="col-sm-2">Vänster</aside>
-            <article class="col-sm-7">
+            <article class="col-sm-7 col-sm-push-2">
                 <h2>Rubrik som är bra att ha</h2>
                 <p>Bacon ipsum dolor amet shank leberkas sausage, ball tip brisket biltong jowl landjaeger kielbasa short loin swine ham salami. Ham ribeye kielbasa andouille, meatloaf shank drumstick jowl shoulder pastrami tenderloin pancetta alcatra. Beef pancetta fatback spare ribs porchetta pork andouille. Turkey jerky pastrami venison ham hock. Bacon pork filet mignon sausage pork belly salami, flank chicken. Ham capicola brisket, ball tip alcatra cow jowl strip steak boudin frankfurter bresaola meatloaf. Cupim jerky beef tenderloin, biltong chicken picanha tongue ball tip capicola.</p>
                 <p>Bacon ipsum dolor amet shank leberkas sausage, ball tip brisket biltong jowl landjaeger kielbasa short loin swine ham salami. Ham ribeye kielbasa andouille, meatloaf shank drumstick jowl shoulder pastrami tenderloin pancetta alcatra. Beef pancetta fatback spare ribs porchetta pork andouille. Turkey jerky pastrami venison ham hock. Bacon pork filet mignon sausage pork belly salami, flank chicken. Ham capicola brisket, ball tip alcatra cow jowl strip steak boudin frankfurter bresaola meatloaf. Cupim jerky beef tenderloin, biltong chicken picanha tongue ball tip capicola.</p>
             </article>
+            <aside class="col-sm-2 col-sm-pull-7">Vänster</aside>
             <aside class="col-sm-3">Höger</aside>
         </div>
     </section>
