--- a/WebApplication46/2016-04-13/natalie.html
+++ b/WebApplication46/2016-04-13/natalie.html
@@ -2,14 +2,18 @@
 <html>
 <head>
     <title></title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <link href="../Content/bootstrap.css" rel="stylesheet" />
     <style>
-        div{
-            border:3px solid hotpink;
+        div {
+            border: 3px solid hotpink;
         }
-        img{
-            width:70%;
+
+        img {
+            width: 30px;
+        }
+        #nisse{
+            text-align:center;
         }
     </style>
 </head>
@@ -18,11 +22,17 @@
         <div class="row">
             <div class="col-sm-3">Fura</div>
             <div class="col-sm-9">
-                <div class="row">Inloggning</div>
-                <div class="row">Klarna varukorg</div>
+                <div class="row">
+                    getbootstrap center-block img-responsive                    
+                    <img src="../images/Hjul.jpg" class="center-block img-responsive"/>
+                </div>
+                <div class="row">
+                    <table>
+                        <tr><td id="nisse"><img src="../images/hjulet.jpg" /></td></tr>
+                    </table>                   
+                </div>
                 <div class="row">länk1 länk1 länk1 länk1 länk1 länk1 </div>
             </div>
-
         </div>
         <div class="row">
             <img src="../2016-04-11/images/kaka.PNG" />
